--- a/.github/workflows/ci-cd-pipline.yml
+++ b/.github/workflows/ci-cd-pipline.yml
@@ -63,12 +63,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up Azure CLI
+        uses: azure/setup-azure-cli@v1
+
+      - name: Azure login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: Deploy application
         run: |
           echo "Deploying to Staging environment..."
-          # Add your deployment script or command here
-          # For example, Azure Web App deployment
-          az webapp deployment source config-zip --resource-group myResourceGroup --name myWebApp --src ./artifacts/myapp.zip
+          az webapp deploy --resource-group myResourceGroup --name myWebApp --src ./artifacts/myapp.zip
 
   notify:
     name: Send Notification
