--- a/.github/workflows/ci-cd-pipline.yml
+++ b/.github/workflows/ci-cd-pipline.yml
@@ -64,7 +64,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Azure CLI
-        uses: azure/setup-azure-cli@v1
+        uses: azure/cli-action@v1
+        with:
+          azcliversion: '2.46.0'
 
       - name: Azure login
         uses: azure/login@v1
