--- a/.github/workflows/ci-cd-pipline.yml
+++ b/.github/workflows/ci-cd-pipline.yml
@@ -92,4 +92,4 @@ jobs:
     steps:
       - name: Send failure notification
         run: |
-          curl -X POST -H 'Content-type: application/json' --data '{"text":"A build or deployment has failed on the CI/CD pipeline!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"A build or deployment has failed on the CI/CD pipeline!"}' ${{ secrets.slackhook }}
