--- a/.github/workflows/ci-cd-pipline.yml
+++ b/.github/workflows/ci-cd-pipline.yml
@@ -73,7 +73,7 @@ jobs:
         with:
           azcliversion: '2.46.0'
 
-      - name: Azure login
+      - name: 20232168@ctucareer.co.za
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
