--- a/.github/workflows/ci-cd-pipline.yml
+++ b/.github/workflows/ci-cd-pipline.yml
@@ -82,7 +82,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./artifacts  # Set this to the directory where your built files are
+          publish_dir: Helloworld.cs  
 
   notify:
     name: Send Notification
